fix(background-image) - changed the background image in style so it applies to the body and covers the whole page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,16 @@
     display: none;
 
 }
-#petContainer1 {
+
+/* #petContainer1 {
     background: url(../images/ignasi_pattern_s.png);
+} */
+
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url("../images/ignasi_pattern_s.png");
+    background-size: cover;
 }
 
 #nav-pic {
